crates/parser/src/snapshots/parser__tests__floats.snap
---
source: crates/parser/src/lib.rs
expression: module
---
Module {
    enabled_features: [
        F16,
    ],
    structs: [],
    consts: [],
    vars: [],
    functions: [
        FnDecl {
            attrs: [],
            name: "main",
            inputs: [],
            output: None,
            body: [
                VarDecl(
                    VarDeclStatement {
                        ident: "x",
                        data_type: Some(
                            Scalar(
                                F32,
                            ),
                        ),
                        initializer: Some(
                            ExprNode {
                                data_type: Scalar(
                                    F32,
                                ),
                                expr: Lit(
                                    F32(
                                        0.0,
                                    ),
                                ),
                            },
                        ),
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        lhs: Expr(
                            LhsExprNode {
                                data_type: Ref(
                                    MemoryViewType {
                                        inner: Scalar(
                                            F32,
                                        ),
                                        storage_class: Function,
                                        access_mode: ReadWrite,
                                    },
                                ),
                                expr: Ident(
                                    "x",
                                ),
                            },
                        ),
                        op: Simple,
                        rhs: ExprNode {
                            data_type: Scalar(
                                F32,
                            ),
                            expr: Lit(
                                F32(
                                    123.456,
                                ),
                            ),
                        },
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        lhs: Expr(
                            LhsExprNode {
                                data_type: Ref(
                                    MemoryViewType {
                                        inner: Scalar(
                                            F32,
                                        ),
                                        storage_class: Function,
                                        access_mode: ReadWrite,
                                    },
                                ),
                                expr: Ident(
                                    "x",
                                ),
                            },
                        ),
                        op: Simple,
                        rhs: ExprNode {
                            data_type: Scalar(
                                F32,
                            ),
                            expr: Lit(
                                F32(
                                    123.0,
                                ),
                            ),
                        },
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        lhs: Expr(
                            LhsExprNode {
                                data_type: Ref(
                                    MemoryViewType {
                                        inner: Scalar(
                                            F32,
                                        ),
                                        storage_class: Function,
                                        access_mode: ReadWrite,
                                    },
                                ),
                                expr: Ident(
                                    "x",
                                ),
                            },
                        ),
                        op: Simple,
                        rhs: ExprNode {
                            data_type: Scalar(
                                F32,
                            ),
                            expr: Lit(
                                F32(
                                    0.123,
                                ),
                            ),
                        },
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        lhs: Expr(
                            LhsExprNode {
                                data_type: Ref(
                                    MemoryViewType {
                                        inner: Scalar(
                                            F32,
                                        ),
                                        storage_class: Function,
                                        access_mode: ReadWrite,
                                    },
                                ),
                                expr: Ident(
                                    "x",
                                ),
                            },
                        ),
                        op: Simple,
                        rhs: ExprNode {
                            data_type: Scalar(
                                F32,
                            ),
                            expr: Lit(
                                F32(
                                    -123.0,
                                ),
                            ),
                        },
                    },
                ),
                VarDecl(
                    VarDeclStatement {
                        ident: "y",
                        data_type: Some(
                            Scalar(
                                F16,
                            ),
                        ),
                        initializer: Some(
                            ExprNode {
                                data_type: Scalar(
                                    F16,
                                ),
                                expr: Lit(
                                    F16(
                                        0.0,
                                    ),
                                ),
                            },
                        ),
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        lhs: Expr(
                            LhsExprNode {
                                data_type: Ref(
                                    MemoryViewType {
                                        inner: Scalar(
                                            F16,
                                        ),
                                        storage_class: Function,
                                        access_mode: ReadWrite,
                                    },
                                ),
                                expr: Ident(
                                    "y",
                                ),
                            },
                        ),
                        op: Simple,
                        rhs: ExprNode {
                            data_type: Scalar(
                                F16,
                            ),
                            expr: Lit(
                                F16(
                                    123.4375,
                                ),
                            ),
                        },
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        lhs: Expr(
                            LhsExprNode {
                                data_type: Ref(
                                    MemoryViewType {
                                        inner: Scalar(
                                            F16,
                                        ),
                                        storage_class: Function,
                                        access_mode: ReadWrite,
                                    },
                                ),
                                expr: Ident(
                                    "y",
                                ),
                            },
                        ),
                        op: Simple,
                        rhs: ExprNode {
                            data_type: Scalar(
                                F16,
                            ),
                            expr: Lit(
                                F16(
                                    123.0,
                                ),
                            ),
                        },
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        lhs: Expr(
                            LhsExprNode {
                                data_type: Ref(
                                    MemoryViewType {
                                        inner: Scalar(
                                            F16,
                                        ),
                                        storage_class: Function,
                                        access_mode: ReadWrite,
                                    },
                                ),
                                expr: Ident(
                                    "y",
                                ),
                            },
                        ),
                        op: Simple,
                        rhs: ExprNode {
                            data_type: Scalar(
                                F16,
                            ),
                            expr: Lit(
                                F16(
                                    0.12298584,
                                ),
                            ),
                        },
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        lhs: Expr(
                            LhsExprNode {
                                data_type: Ref(
                                    MemoryViewType {
                                        inner: Scalar(
                                            F16,
                                        ),
                                        storage_class: Function,
                                        access_mode: ReadWrite,
                                    },
                                ),
                                expr: Ident(
                                    "y",
                                ),
                            },
                        ),
                        op: Simple,
                        rhs: ExprNode {
                            data_type: Scalar(
                                F16,
                            ),
                            expr: Lit(
                                F16(
                                    -123.0,
                                ),
                            ),
                        },
                    },
                ),
            ],
        },
    ],
}
