crates/parser/src/snapshots/parser__tests__loops.snap
---
source: crates/parser/src/lib.rs
expression: module
---
Module {
    enabled_features: [],
    structs: [],
    consts: [],
    vars: [],
    functions: [
        FnDecl {
            attrs: [],
            name: "main",
            inputs: [],
            output: None,
            body: [
                Loop(
                    LoopStatement {
                        body: [
                            VarDecl(
                                VarDeclStatement {
                                    ident: "x",
                                    data_type: None,
                                    initializer: Some(
                                        ExprNode {
                                            data_type: Scalar(
                                                I32,
                                            ),
                                            expr: Lit(
                                                I32(
                                                    0,
                                                ),
                                            ),
                                        },
                                    ),
                                },
                            ),
                            Break,
                        ],
                        continuing: None,
                    },
                ),
                Loop(
                    LoopStatement {
                        body: [
                            Continue,
                        ],
                        continuing: Some(
                            ContinuingBlock {
                                stmts: [],
                                break_if: Some(
                                    ExprNode {
                                        data_type: Scalar(
                                            Bool,
                                        ),
                                        expr: Lit(
                                            Bool(
                                                true,
                                            ),
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
                While(
                    WhileStatement {
                        condition: ExprNode {
                            data_type: Scalar(
                                Bool,
                            ),
                            expr: Lit(
                                Bool(
                                    true,
                                ),
                            ),
                        },
                        body: [
                            Break,
                        ],
                    },
                ),
                ForLoop(
                    ForLoopStatement {
                        header: ForLoopHeader {
                            init: Some(
                                VarDecl(
                                    VarDeclStatement {
                                        ident: "i",
                                        data_type: None,
                                        initializer: Some(
                                            ExprNode {
                                                data_type: Scalar(
                                                    I32,
                                                ),
                                                expr: Lit(
                                                    I32(
                                                        0,
                                                    ),
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ),
                            condition: Some(
                                ExprNode {
                                    data_type: Scalar(
                                        Bool,
                                    ),
                                    expr: BinOp(
                                        BinOpExpr {
                                            op: Less,
                                            left: ExprNode {
                                                data_type: Ref(
                                                    MemoryViewType {
                                                        inner: Scalar(
                                                            I32,
                                                        ),
                                                        storage_class: Function,
                                                        access_mode: ReadWrite,
                                                    },
                                                ),
                                                expr: Var(
                                                    VarExpr {
                                                        ident: "i",
                                                    },
                                                ),
                                            },
                                            right: ExprNode {
                                                data_type: Scalar(
                                                    I32,
                                                ),
                                                expr: Lit(
                                                    I32(
                                                        1,
                                                    ),
                                                ),
                                            },
                                        },
                                    ),
                                },
                            ),
                            update: Some(
                                Increment(
                                    IncrementStatement {
                                        lhs: Expr(
                                            LhsExprNode {
                                                data_type: Ref(
                                                    MemoryViewType {
                                                        inner: Scalar(
                                                            I32,
                                                        ),
                                                        storage_class: Function,
                                                        access_mode: ReadWrite,
                                                    },
                                                ),
                                                expr: Ident(
                                                    "i",
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ),
                        },
                        body: [
                            Continue,
                        ],
                    },
                ),
            ],
        },
    ],
}
